--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "target": "ESNext",
       "module": "CommonJS",
       "outDir": "./dist",
-      "strict": true,
+      // "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true
     },
