--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "test": "npx playwright test",
-  "test:headed": "npx playwright test --headed",
-  "test:report": "npx playwright show-report"
+    "test": "npx playwright test",
+    "test:headed": "npx playwright test --headed",
+    "test:report": "npx playwright show-report"
   },
   "repository": {
     "type": "git",
@@ -20,11 +20,14 @@
   },
   "homepage": "https://github.com/soldelv/playwright-test-framework#readme",
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "@playwright/test": "^1.50.0",
-    "eslint": "^9.18.0",
+    "eslint": "^9.19.0",
+    "globals": "^15.14.0",
     "playwright": "^1.50.0",
     "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0"
   }
 }
