--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,3 +37,23 @@ jobs:
           name: playwright-report
           path: playwright-report
           retention-days: 7
+  deploy:
+      needs: test
+      runs-on: ubuntu-latest
+      if: github.ref == 'refs/heads/main'
+
+      steps:
+        - name: Check out repository
+          uses: actions/checkout@v4
+
+        - name: Download Playwright Report
+          uses: actions/download-artifact@v4
+          with:
+            name: playwright-report
+            path: playwright-report
+
+        - name: Deploy to GitHub Pages
+          uses: JamesIves/github-pages-deploy-action@v4
+          with:
+            branch: gh-pages
+            folder: playwright-report
