--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,23 +37,11 @@ jobs:
           name: playwright-report
           path: playwright-report
           retention-days: 7
-  deploy:
-      needs: test
-      runs-on: ubuntu-latest
-      if: github.ref == 'refs/heads/main'
 
-      steps:
-        - name: Check out repository
-          uses: actions/checkout@v4
-
-        - name: Download Playwright Report
-          uses: actions/download-artifact@v4
-          with:
-            name: playwright-report
-            path: playwright-report
-
-        - name: Deploy to GitHub Pages
-          uses: JamesIves/github-pages-deploy-action@v4
-          with:
-            branch: gh-pages
-            folder: playwright-report
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GH_PAT }}
+          publish_dir: ./playwright-report
+          publish_branch: gh-pages
+ 
