--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,18 +30,36 @@ jobs:
         run: |
           npx playwright test
 
-      - name: Upload Playwright Report
+      - name: Commit Playwright Report
         if: always()
-        uses: actions/upload-artifact@v4
+        run: |
+          git add playwright-report
+          git commit -m "Update Playwright test report [skip ci]" || echo "No changes to commit"
+          git push origin main || echo "No changes to push"
+  
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+  
+    steps:
+      - name: Check out gh-pages branch
+        uses: actions/checkout@v4
         with:
-          name: playwright-report
-          path: playwright-report
-          retention-days: 7
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GH_PAT }}
-          publish_dir: ./playwright-report
-          publish_branch: gh-pages
- 
+          ref: gh-pages
+          fetch-depth: 0  # Ensures history is preserved
+  
+      - name: Copy Playwright Report from main
+        run: |
+          git checkout main -- playwright-report
+          rm -rf .gitignore README.md
+          mv playwright-report/* .
+          rm -rf playwright-report
+  
+      - name: Commit and Push Report to gh-pages
+        env:
+           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+        run: |
+          git add .
+          git commit -m "Deploy Playwright Report [skip ci]" || echo "No changes to commit"
+          git push
