--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,9 +57,9 @@ jobs:
           rm -rf playwright-report
   
       - name: Commit and Push Report to gh-pages
-        env:
-           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "Deploy Playwright Report [skip ci]" || echo "No changes to commit"
-          git push
+          git push origin gh-pages || echo "No changes to push"
