--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Run Playwright Tests
+name: Run Playwright Tests and Deploy Report
 
 on:
   push:
@@ -19,47 +19,46 @@ jobs:
           node-version: '22'
 
       - name: Install dependencies
-        run: |
-          npm install
+        run: npm install
 
       - name: Install Playwright Browsers
-        run: |
-          npx playwright install
+        run: npx playwright install
 
       - name: Run Playwright tests
-        run: |
-          npx playwright test
+        run: npx playwright test
 
       - name: Commit Playwright Report
         if: always()
         run: |
           git add playwright-report
           git commit -m "Update Playwright test report [skip ci]" || echo "No changes to commit"
-          git push origin main || echo "No changes to push"
-  
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git main || echo "No changes to push"
+
   deploy:
     needs: test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-  
+
     steps:
       - name: Check out gh-pages branch
         uses: actions/checkout@v4
         with:
           ref: gh-pages
           fetch-depth: 0  # Ensures history is preserved
-  
+
       - name: Copy Playwright Report from main
         run: |
           git checkout main -- playwright-report
           rm -rf .gitignore README.md
           mv playwright-report/* .
           rm -rf playwright-report
-  
+
       - name: Commit and Push Report to gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}  # Use Personal Access Token
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "Deploy Playwright Report [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git gh-pages || echo "No changes to push"
+          git add playwright-report
+          git commit -m "Update Playwright test report [skip ci]" || echo "No changes to commit"
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git main || echo "No changes to push"
