--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -55,10 +55,10 @@ jobs:
 
       - name: Commit and Push Report to gh-pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}  # Use Personal Access Token
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add playwright-report
-          git commit -m "Update Playwright test report [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git main || echo "No changes to push"
+          git add .
+          git commit -m "Deploy Playwright Report [skip ci]" || echo "No changes to commit"
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git gh-pages || echo "No changes to push"
